# RayTracer

./: .gitignore  CMakeLists.txt
inputs/: input.txt
src/: Camera.cc  Camera.cpp  Camera.hh  Camera.hpp  Scene.cc  Scene.hh  main.cc  util.hh
src/light/: Light.cc  Light.hh
src/scenarios/: demovideo.cc  demovideo.hh
src/shapes/: Cylinder.cc  Cylinder.hh  Mesh.cc  Mesh.hh  Shape.cc  Shape.hh  Sphere.cc  Sphere.hh  Triangle.cc  Triangle.hh  tools.cc  tools.hh
