CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
PROJECT(RayTracer)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")

ADD_COMPILE_OPTIONS(-std=c++1y -Wall -Wextra -pedantic)
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3 -D_DEBUG")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3")

FILE(GLOB_RECURSE SOURCES "src/*")

ADD_EXECUTABLE(RayTracer ${SOURCES} src/main.cc)
TARGET_LINK_LIBRARIES(RayTracer opencv_core opencv_imgproc opencv_highgui opencv_video assimp tbb)
